massive organizational update, pin and update images
